# Resume-Advisor-Backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
app/: config.py  main.py  schemas.py
app/middleware/: auth.py
app/prompts/: advisor.md
app/routes/: analyze.py  fetch_jd.py  health.py  parse.py
app/services/: analyzer.py  fetcher.py  parser.py
tests/: test_analyze.py  test_auth.py  test_fetch_jd.py  test_health.py  test_parse.py
