[project]
name = "resume-advisor-api"
version = "0.1.0"
description = "Backend API for the Odyssey Therapeia Résumé Advisor tool"
requires-python = ">=3.11"
dependencies = [
    # web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",       # for file uploads via multipart/form-data

    # config & validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # external SDK
    "anthropic>=0.39.0",

    # document parsing
    "pdfplumber>=0.11.0",             # PDF text extraction (better than pypdf for layout)
    "python-docx>=1.1.2",             # .docx files

    # url fetching
    "httpx>=0.27.0",                  # async http client
    "trafilatura>=1.12.0",            # readable-web extraction (strips nav, ads, etc)
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "reportlab>=4.2.0",
    "respx>=0.21.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
